Fix 'missing' navbar toggler in mobile widths
Changes to the header made it disappear due to colour looking too much like background.

--- a/socialhome/static/sass/common.scss
+++ b/socialhome/static/sass/common.scss
@@ -36,6 +36,11 @@
   }
 }
 
+// Dark navbar tuning
+.navbar-toggler {
+  color: #fff;
+}
+
 // Display django-debug-toolbar.
 // See https://github.com/django-debug-toolbar/django-debug-toolbar/issues/742
 // and https://github.com/pydanny/cookiecutter-django/issues/317
